--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>BAHUBALI Landing Page Video Background | Landing Page</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="img/logo-name.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+</head>
+<body>
 
+	<!--Page Section Start-->
+	<section>
+		<!--Header-->
+		<header>
+			<a href="#"><img src="img/logo-name.png" class="logo" alt="logo"></a>
+			<div class="toggle" onclick="toggleMenu();"></div>
+			<ul class="navigation">
+			    <li><a href="#">Videos</a></li>
+			    <li><a href="#">Character</a></li>
+			    <li><a href="#">Carriers</a></li>
+			    <li><a href="#">Movies</a></li>
+			    <li><a href="#">TV Shows</a></li>
+			    <li><a href="#">Games</a></li>
+			    <li><a href="#">More</a></li>
+			</ul>
+		</header>
+
+		<!-- Video Background -->
+		<video src="img/bahu.mp4" muted loop autoplay></video>
+
+		<!--Content Text-->
+		<div class="content">
+			<div class="textBox">
+				<h2><span> Bahubali 2</span></h2>
+				<h1>The Conclusion</h1>
+				<p>After learning that his father was brutally killed by Bhallaldeva,Mahendra bahubali raise an army to defeat him and release his motther from the former's captivity.</p>
+				<a href="#">Watch trailler now</a>
+			</div>
+		</div>
+	</section>
+	<!--Page Section End-->
+	
+	<!--Script-->
+	<script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>BAHUBALI Landing Page Video Background | Landing Page</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="img/logo-name.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+</head>
+<body>
+
+	<!--Page Section Start-->
+	<section>
+		<!--Header-->
+		<header>
+			<a href="#"><img src="img/logo-name.png" class="logo" alt="logo"></a>
+			<div class="toggle" onclick="toggleMenu();"></div>
+			<ul class="navigation">
+			    <li><a href="#">Videos</a></li>
+			    <li><a href="#">Character</a></li>
+			    <li><a href="#">Carriers</a></li>
+			    <li><a href="#">Movies</a></li>
+			    <li><a href="#">TV Shows</a></li>
+			    <li><a href="#">Games</a></li>
+			    <li><a href="#">More</a></li>
+			</ul>
+		</header>
+
+		<!-- Video Background -->
+		<video src="img/bahu.mp4" muted loop autoplay></video>
+
+		<!--Content Text-->
+		<div class="content">
+			<div class="textBox">
+				<h2><span> Bahubali 2</span></h2>
+				<h1>The Conclusion</h1>
+				<p>After learning that his father was brutally killed by Bhallaldeva,Mahendra bahubali raise an army to defeat him and release his motther from the former's captivity.</p>
+				<a href="#">Watch trailler now</a>
+			</div>
+		</div>
+	</section>
+	<!--Page Section End-->
+	
+	<!--Script-->
+	<script src="script.js"></script>
+</body>
+</html>
